--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,27 +6,15 @@
     font-weight: 600;
     border-bottom: 1px solid #fff;
 
-}
+}  .navbar {
+    font-family: 'Marck Script', cursive;
+    font-size: xx-large;
 
-.banner {
-    position: relative;
-    width: 10px;
-    margin:100px auto;
-}
-
-.banner image{
-    position: center;
-    border: white;
-}
-
-.navbar {
-    font-size: x-large;
     position: relative;
 
 }
 
 .nav-link {
-    font-family: 'Marck Script', cursive;
-    font-size: xx-large;
-    color: rgba(127, 101, 5, 0.7) !important;
+
+    color: rgba(206, 163, 14, 0.7) !important;
 }
