--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,21 @@
 {% extends 'shared/base.html' %}
 {% block content %}
 {% load static %}
-    <style>
-    body {
-        background-image: url("{% static 'images/r_banner_one.jpg' %}");
-    }
-
-    </style>
-
-    <div>
-        <h3 id="content">За Вашият специален ден!</h3>
-    </div>
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+{% block extrahead %}
+    <link rel="stylesheet" href="{% static "css/index.css" %}">
+{% endblock %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+    <div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Your dream wedding</h1>
+            <p>
+                Start dreaming with us now...
+            </p>
+        </div>
+    </div>
+    </div>
+
 {% endblock %}
 
