Added validators and some other changes

--- a/templates/add_post/add-mainpost.html
+++ b/templates/add_post/add-mainpost.html
@@ -1,10 +1,10 @@
 {% extends 'shared/base.html' %}
 
-
+{% load static %}
 {% block content %}
 
-<hr>
 
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <h1 style="font-size: 40px; margin-left: 30px;" class="p-2">
      Add Main Post
   </h1>
