--- a/templates/comments/post_to_comment.html
+++ b/templates/comments/post_to_comment.html
@@ -14,7 +14,7 @@
             {% endfor %}
         {% else %}
             <div class="box">
-                <h3>There are no comments for this pet. </h3>
+                <h3>There are no comments. </h3>
             </div>
         {% endif %}
             <div class="box">
@@ -23,8 +23,8 @@
                     {{ comment_form }}
                     <button class="btn btn-primary mt-2" type="submit">Add comment</button>
                 </form>
-
             </div>
+
             </div>
 
 {% endblock %}
