--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -15,7 +15,7 @@
     <title>Gallery</title>
 </head>
 <body>
-<h1>Hey</h1>
+<h1>Check out our amazing gallery!</h1>
     <div class="gallery">
         <a href="{% static 'images/avenue01big.jpg' %}"><img src="{% static "images/avenue01small.jpg" %}"></a>
         <a href="{% static 'images/avenue02big.jpg' %}"><img src="{% static "images/avenue02small.jpg" %}"></a>
