--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -4,8 +4,9 @@ body{
 
 h1{
     text-align: center;
-    color: green;
+    color: #bb8f35;
     margin: 30px 0 50px;
+    font-family: 'Marck Script', cursive;
 }
 
 .gallery{
