--- a/templates/auth/sign-in.html
+++ b/templates/auth/sign-in.html
@@ -1,11 +1,9 @@
 {% extends 'shared/base.html' %}
-
-
 {% block content %}
 {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
     <div class="container">
-        <form class="w-50 m-auto" method="post" style="border: 1px solid grey; margin: 10% 0%; padding: 5% 5%"
+        <form class="w-50 m-auto" method="post" style="border: 1px solid grey; margin: 10% 0; padding: 5% 5%"
               action="{% url 'sign in' %}">
             <h2>Login</h2>
             {% csrf_token %}
