--- a/templates/testimonial/create-testimonial.html
+++ b/templates/testimonial/create-testimonial.html
@@ -1,6 +1,8 @@
 {% extends 'shared/base.html' %}
+{% load static %}
 
 {% block content %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
     <h1 class="text-center">Add new testimony</h1>
     <div class="row">
         <div class="col-lg-3"></div>
