--- a/templates/add_post/show_main_post.html
+++ b/templates/add_post/show_main_post.html
@@ -5,6 +5,14 @@
 {% block content %}
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <style>
+    body{
+        background: linear-gradient(120deg, rgba(185, 99, 41, 0.55), rgba(134, 67, 161, 0.53));
+
+    }
+
+
+    </style>
     <div class="container">
         <div class="row justify-content-center m-2">
             {% for p in post %}
