--- a/templates/auth/sign-in.html
+++ b/templates/auth/sign-in.html
@@ -1,15 +1,21 @@
 {% extends 'shared/base.html' %}
 {% block content %}
 {% load static %}
+    {% block extrahead %}
+    <link rel="stylesheet" href="{% static "css/signin.css" %}">
+    {% endblock %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-    <div class="container">
-        <form class="w-50 m-auto" method="post" style="border: 1px solid grey; margin: 10% 0; padding: 5% 5%"
-              action="{% url 'sign in' %}">
-            <h2>Login</h2>
-            {% csrf_token %}
-            {{ form }}
-
-            <button type="submit" class="btn btn-primary">Login</button>
+    <div class="center">
+        <div class="form">
+                <form method="POST">
+                    <h1>Sign in</h1>
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Login">
+            <div class="signup_link"> Not a member? <a href="{% url 'sign up' %}" class="link">Sign up</a>
+            </div>
         </form>
     </div>
+    </div>
+
 {% endblock %}
