--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -6,6 +6,11 @@
 {% endblock %}
 
 <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <style>
+    body{
+        background: linear-gradient(120deg, #93908d, rgba(134, 67, 161, 0.29));
+    }
+    </style>
 
 
 <!DOCTYPE html>
