--- a/templates/auth/sign-up.html
+++ b/templates/auth/sign-up.html
@@ -1,11 +1,21 @@
 {% extends 'shared/base.html' %}
-{% load static %}
-
 {% block content %}
+{% load static %}
+    {% block extrahead %}
+    <link rel="stylesheet" href="{% static "css/signin.css" %}">
+    {% endblock %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-    <form action="{% url 'sign up' %}" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button>Sign up</button>
-    </form>
+    <div class="center">
+        <div class="form">
+                <form method="POST">
+                    <h1>Sign up</h1>
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Login">
+            <div class="signup_link"> Already have an account? <a href="{% url 'sign in' %}" class="link">Sign in</a>
+            </div>
+        </form>
+    </div>
+    </div>
+
 {% endblock %}
