--- a/templates/profiles/details.html
+++ b/templates/profiles/details.html
@@ -4,6 +4,11 @@
 
 {% block content %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <style>
+    body{
+        background: linear-gradient(120deg, #b96329, rgba(134, 61, 117, 0.51));
+    }
+    </style>
     <div class="text-center">
         <h1>Hello, {{ request.user }}!</h1>
         <h5>This is your profile</h5>
