I made some changes to my templates and added some new CSS files

--- a/templates/add_post/show_main_post.html
+++ b/templates/add_post/show_main_post.html
@@ -21,7 +21,7 @@
                     <div class="card m-5 p-2" style="width: 40rem;">
                         <img src="{{ p.image.url }}" class="card-img-top" alt="...">
                     </div>
-                <span><a href="{% url 'post to comment' p.id %}" style="background-color: #F3E0B9 ;" class="btn btn-primary m-1">Click here to share your thoughts with us! Check out what other think about us as well! Thank you!</a></span>
+                <span><a href="{% url 'post to comment' p.id %}" style="background-color: deepskyblue ;" class="btn btn-primary m-1">Click here to share your thoughts with us! Check out what other think about us as well! Thank you!</a></span>
                 </div>
             {% endfor %}
 
