--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -1,6 +1,6 @@
 body{
     margin:0;
-    padding: 0;
+    padding: 10px;
     font-family: montserrat;
     background: linear-gradient(120deg, #b96329, #8643a1);
     height: 100vh;
@@ -63,4 +63,8 @@ input[type='submit']{
 
 .signup_link a:hover{
     text-decoration: underline;
+}
+
+h1{
+    color: white;
 }
