--- a/templates/testimonial/show-testimonials.html
+++ b/templates/testimonial/show-testimonials.html
@@ -1,20 +1,19 @@
 {% extends 'shared/base.html' %}
 {% load static %}
-
 {% block content %}
+    {% block extrahead %}
+    <link rel="stylesheet" href="{% static "css/testimonials.css" %}">
+    {% endblock %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-    <style>
-    body{
-        background: linear-gradient(120deg, rgba(185, 99, 41, 0.67), rgba(134, 67, 161, 0.63));
-    }
-    </style>
-    <h1 class='text-center'>Your Testimonials</h1>
+
+{% if testimonials %}
+
     <div class="row">
         {% for t in testimonials %}
             <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="{{ t.image.url }}" alt="" width="140"
-                 height="250">
+                    <img class="card-img-top" src="{{ t.image.url }}" alt="" width="50"
+                 height="200">
                     <div class="card-body">
                         <h5 class="card-title">{{ t.title }}</h5>
                         <p class="card-text">{{ t.user }}</p>
@@ -23,5 +22,10 @@
                 </div>
             </div>
         {% endfor %}
+    {% else %}
+    <h1>There are no testimonials</h1>
+    {% endif %}
     </div>
+
+
 {% endblock %}
