--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -1,6 +1,6 @@
 body{
     margin:0;
-    padding: 10px;
+    padding: 0;
     font-family: montserrat;
     background: linear-gradient(120deg, #b96329, #8643a1);
     height: 100vh;
@@ -66,5 +66,5 @@ input[type='submit']{
 }
 
 h1{
-    color: white;
+    color: #e5e5e5;
 }
