--- a/templates/auth/sign-up.html
+++ b/templates/auth/sign-up.html
@@ -11,7 +11,7 @@
                     <h1>Sign up</h1>
                     {% csrf_token %}
                     {{ form }}
-                    <input type="submit" value="Login">
+                    <input type="submit" value="Sign up">
             <div class="signup_link"> Already have an account? <a href="{% url 'sign in' %}" class="link">Sign in</a>
             </div>
         </form>
