--- a/templates/testimonial/delete-testimonial.html
+++ b/templates/testimonial/delete-testimonial.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
     <div class="row">
         <div class="col-lg-12 text-center">
-            <h1>Are you sure you want to delete {{ pet.name }}?</h1>
+            <h1>Are you sure you want to delete it?</h1>
             <div class="m-auto d-flex justify-content-center">
                 <div class="m-2">
                     <form method="post">
