--- a/templates/testimonial/testimonial-detail.html
+++ b/templates/testimonial/testimonial-detail.html
@@ -13,7 +13,7 @@
         <div class="center">
             <div class="d-flex justify-content-between">
 
-                <h5><strong>User:</strong> {{ testimonial.user.email }}</h5>
+                <h5><strong>User: {{ testimonial.user.email }}</strong></h5>
             </div>
             <p class="mt-2"><strong>Testimony</strong>: {{ testimonial.testimony }}</p>
             {% if is_user %}
